examples/invalid/unguarded2.ccs
X[a] := X[a+1];

X[0]

